WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287542
Reintroduce LazyIframeLoadingEnabled preference for WebKitLegacy
https://bugs.webkit.org/show_bug.cgi?id=287542
Summary
Reintroduce LazyIframeLoadingEnabled preference for WebKitLegacy
Jonathan Bedard
Reported
2025-02-11 21:14:31 PST
After
288664@main
, editing/undo/redo-reapply-edit-command-crash.html consistently crashes on Debug WebKitLegacy on macOS. History of
https://results.webkit.org/?suite=layout-tests&test=editing%2Fundo%2Fredo-reapply-edit-command-crash.html
lays out the blame clearly. Crash log attached.
Attachments
Crashlog
(16.53 KB, text/plain)
2025-02-11 21:16 PST
,
Jonathan Bedard
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2025-02-11 21:16:11 PST
Created
attachment 474214
[details]
Crashlog
Radar WebKit Bug Importer
Comment 2
2025-02-11 21:16:29 PST
<
rdar://problem/144668714
>
EWS
Comment 3
2025-02-11 21:30:11 PST
Test gardening commit
290256@main
(8df35ca1807c): <
https://commits.webkit.org/290256@main
> Reviewed commits have been landed. Closing PR #40466 and removing active labels.
Anne van Kesteren
Comment 4
2025-02-12 06:16:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40483
EWS
Comment 5
2025-02-12 10:10:47 PST
Committed
290278@main
(9043596f0879): <
https://commits.webkit.org/290278@main
> Reviewed commits have been landed. Closing PR #40483 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug