Reintroduce LazyIframeLoadingEnabled preference for WebKitLegacy https://bugs.webkit.org/show_bug.cgi?id=287542 rdar://144668714

Reviewed by Jonathan Bedard.

In 288664@main we removed this preference that was enabled for
WebKitLegacy, but was disabled for WebKitLegacy in testing. This later
revealed a crash in testing that would have already applied to shipping
WebKitLegacy as it was never disabled there.

So now we reintroduce the preference, but clearly mark it as unsuitable
for WebKitLegacy and upgrade it from stable to mature.

* LayoutTests/platform/mac-wk1/TestExpectations:
* LayoutTests/platform/mac-wk1/imported/w3c/web-platform-tests/html/dom/idlharness.https_include=HTML._-expected.txt:
* LayoutTests/platform/mac-wk1/imported/w3c/web-platform-tests/html/semantics/embedded-content/the-iframe-element/iframe-loading-lazy-multiple-queued-navigations-expected.txt:
* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/html/HTMLIFrameElement.cpp:
(WebCore::HTMLIFrameElement::shouldLoadFrameLazily):
* Source/WebCore/html/HTMLIFrameElement.idl:

Canonical link: https://commits.webkit.org/290278@main